--- a/_includes/locations_list.html
+++ b/_includes/locations_list.html
@@ -20,7 +20,7 @@
         <li>
             <strong>Istanbul, Turkey</strong>: A city that straddles Europe and Asia, known for its rich history and cultural landmarks like Hagia Sophia, a masterpiece blending Byzantine and Ottoman architecture; the Blue Mosque with its iconic minarets and blue tiles; Topkapi Palace, home to Ottoman sultans for centuries; the bustling Grand Bazaar, one of the world’s oldest markets; and the Bosphorus Cruise, offering scenic views of palaces, bridges, and waterfront mansions.
             <br>
-            <a href="/istanbul/" target="_blank">Read more</a>
+            <a href="{{ "/istanbul/" | relative_url }}" target="_blank">Read more</a>
         </li>
     
         <li>
