--- a/_includes/locations_list.html
+++ b/_includes/locations_list.html
@@ -18,43 +18,43 @@
     <ul>
 
         <li>
-            <strong>Istanbul, Turkey</strong>: A city that straddles Europe and Asia, known for its rich history and cultural landmarks like Hagia Sophia, a masterpiece blending Byzantine and Ottoman architecture; the Blue Mosque with its iconic minarets and blue tiles; Topkapi Palace, home to Ottoman sultans for centuries; the bustling Grand Bazaar, one of the world’s oldest markets; and the Bosphorus Cruise, offering scenic views of palaces, bridges, and waterfront mansions.
+            <strong>Istanbul, Turkey</strong>: Best palaces and cultural/historical sights, up there for the best food along with Rome and Athens. Too much harassment and scammaz though.
             <br>
             <a href="{{ "/istanbul/" | relative_url }}" target="_blank">Read more</a>
         </li>
     
         <li>
-            <strong>Athens, Greece</strong>: The cradle of Western civilization, known for its ancient landmarks such as the Acropolis, Parthenon, and the Temple of Olympian Zeus; the historic Plaka neighborhood with its narrow streets and neoclassical architecture; and the National Archaeological Museum, housing some of the most important artifacts from a variety of archaeological locations around Greece.
+            <strong>Athens, Greece</strong>: Competing with Paris to lead the world in cigarettes per capita. Met a 10yo that was vaping. The Acropolis is cool though. Stayed in a crazy cheap hotel and skipped some good rope.
             <br>
             <a href="{{ "/athens/" | relative_url }}" target="_blank">Read more</a>
         </li>
         <li>
-            <strong>Vienna, Austria</strong>: A city renowned for its artistic and intellectual legacy, with landmarks like the Schönbrunn Palace, the Hofburg, and St. Stephen's Cathedral; the Ringstrasse boulevard lined with grand buildings, monuments, and parks; and the Vienna State Opera, one of the leading opera houses in the world.
+            <strong>Vienna, Austria</strong>: Architecture, shopping, opera, concerts, this place is real classy. And Wiener does not mean sausage!
             <br>
             <a href="{{ "/vienna/" | relative_url }}" target="_blank">Read more</a>
         </li>
         <li>
-            <strong>Tirana, Albania</strong>: The vibrant capital city known for its colorful Ottoman, Fascist, and Soviet-era architecture; Skanderbeg Square, the heart of the city; the National History Museum with exhibits spanning Albania's history; and the Dajti Ekspres cable car offering panoramic views of the city.
+            <strong>Tirana, Albania</strong>: Walked 5km along the highway to get to my hostel. The city is like if you randomly sampled cities across location and time from the last 100 years and then glued it together. Most friendly people I met. The food is good and cheap.
             <br>
             <a href="{{ "/tirana/" | relative_url }}" target="_blank">Read more</a>
         </li>
         <li>
-            <strong>Rome, Italy</strong>: The Eternal City, famous for its nearly 3,000 years of globally influential art, architecture, and culture; landmarks such as the Colosseum, the Roman Forum, and the Pantheon; Vatican City, home to St. Peter's Basilica and the Vatican Museums; and the Trevi Fountain, a baroque masterpiece.
+            <strong>Rome, Italy</strong>: Oversaturated but not without reason. This place was insane.
             <br>
             <a href="{{ "/rome/" | relative_url }}" target="_blank">Read more</a>
         </li>
         <li>
-            <strong>Paris, France</strong>: The City of Light, known for its art, fashion, and culture; iconic landmarks like the Eiffel Tower, Notre-Dame Cathedral, and the Louvre Museum; the charming Montmartre district; and the Seine River cruises offering views of the city's historic architecture.
+            <strong>Paris, France</strong>: Don't go in the winter. The Louvre was really nice though. Couldn't afford to eat French dining so I ate a fat plate of lamb biryani once a day.
             <br>
             <a href="{{ "/paris/" | relative_url }}" target="_blank">Read more</a>
         </li>
         <li>
-            <strong>Stockholm, Sweden</strong>: The capital city spread across 14 islands, known for its beautiful archipelago, the medieval old town of Gamla Stan, the Royal Palace, and the Vasa Museum, which houses a well-preserved 17th-century warship.
+            <strong>Stockholm, Sweden</strong>: Vikings and boats and cold water. Clean and no smokers.
             <br>
             <a href="{{ "/stockholm/" | relative_url }}" target="_blank">Read more</a>
         </li>
         <li>
-            <strong>Reykjavik, Iceland</strong>: The northernmost capital of the world, known for its modernist architecture, the Hallgrímskirkja church, the Harpa concert hall, and the nearby Blue Lagoon geothermal spa; as well as its vibrant arts scene and nightlife.
+            <strong>Reykjavik, Iceland</strong>: Get a car and drive away as fast as you can. Sorry Reykjavik, you can be the juiciest apple and some people just like oranges.
             <br>
             <a href="{{ "/reykjavik/" | relative_url }}" target="_blank">Read more</a>
         </li>
