--- a/_includes/locations_list.html
+++ b/_includes/locations_list.html
@@ -18,18 +18,18 @@
     <ul>
 
         <li>
-            <strong>Istanbul, Turkey</strong>: Best palaces and cultural/historical sights, up there for the best food along with Rome and Athens. Too much harassment and scammaz though.
+            <strong>Istanbul, Turkey</strong>: Wonderful palaces, culture, and history. Had some of the best food along with Rome and Athens. The scammers are some of the most aggressive in the world.
             <br>
             <a href="{{ "/istanbul/" | relative_url }}" target="_blank">Read more</a>
         </li>
     
         <li>
-            <strong>Athens, Greece</strong>: Competing with Paris to lead the world in cigarettes per capita. Met a 10yo that was vaping. The Acropolis is cool though. Stayed in a crazy cheap hotel and skipped some good rope.
+            <strong>Athens, Greece</strong>: Competing with Paris to lead the world in cigarettes per capita. Met a 10yo that was vaping. The Acropolis is cool though. Stayed in Kato Patissia (the "hood" as a Greek later told me) but it was cool. 
             <br>
             <a href="{{ "/athens/" | relative_url }}" target="_blank">Read more</a>
         </li>
         <li>
-            <strong>Vienna, Austria</strong>: Architecture, shopping, opera, concerts, this place is real classy. And Wiener does not mean sausage!
+            <strong>Vienna, Austria</strong>: Opera, concerts, and class. And Wiener does not mean sausage!
             <br>
             <a href="{{ "/vienna/" | relative_url }}" target="_blank">Read more</a>
         </li>
@@ -39,12 +39,12 @@
             <a href="{{ "/tirana/" | relative_url }}" target="_blank">Read more</a>
         </li>
         <li>
-            <strong>Rome, Italy</strong>: Oversaturated but not without reason. This place was insane.
+            <strong>Rome, Italy</strong>: Oversaturated even in the winter. The streets and buildings were beautiful. The food was cheap and delicious. I wish I had spent more time.
             <br>
             <a href="{{ "/rome/" | relative_url }}" target="_blank">Read more</a>
         </li>
         <li>
-            <strong>Paris, France</strong>: Don't go in the winter. The Louvre was really nice though. Couldn't afford to eat French dining so I ate a fat plate of lamb biryani once a day.
+            <strong>Paris, France</strong>: Depressing in the winter. The Louvre was really nice though. Couldn't afford to eat French dining so I had lamb biryani every day.
             <br>
             <a href="{{ "/paris/" | relative_url }}" target="_blank">Read more</a>
         </li>
@@ -54,7 +54,7 @@
             <a href="{{ "/stockholm/" | relative_url }}" target="_blank">Read more</a>
         </li>
         <li>
-            <strong>Reykjavik, Iceland</strong>: Get a car and drive away as fast as you can. Sorry Reykjavik, you can be the juiciest apple and some people just like oranges.
+            <strong>Reykjavik, Iceland</strong>: Rent a car and get out of this city as fast as you can. 
             <br>
             <a href="{{ "/reykjavik/" | relative_url }}" target="_blank">Read more</a>
         </li>
